The toggle icon updates accordingly

--- a/app/src/main/res/layout/app_bar_main.xml
+++ b/app/src/main/res/layout/app_bar_main.xml
@@ -13,9 +13,9 @@
 
         <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar_main"
+            style="@style/AppTitle"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@color/color_300"
             app:layout_scrollFlags="scroll|enterAlways"
             app:title="@string/bar_title" />
 
