--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -3,7 +3,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/action_toggle_group"
-        android:title="@string/action_toggle_group"
         android:icon="@drawable/ic_toggle_off"
+        android:title="@string/action_toggle_group"
+        app:iconTint="@color/icon"
         app:showAsAction="always" />
 </menu>
