--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+
     <style name="Theme.MyTasks" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/primary</item>
         <item name="colorPrimaryDark">@color/primaryDark</item>
@@ -13,7 +14,7 @@
         <item name="materialButtonOutlinedStyle">@style/outlinedButton</item>
 
         <!--        <item name="colorError">@color/colorError</item>-->
-<!--        <item name="colorOnError">@color/colorOnError</item>-->
+        <!--        <item name="colorOnError">@color/colorOnError</item>-->
         <item name="android:fontFamily">@font/red_hat_display</item>
     </style>
 
@@ -27,11 +28,6 @@
         <item name="android:textColor">@color/text_button</item>
     </style>
 
-    <style name="mainButton" parent="Widget.Material3.Button">
-        <item name="android:textColor">@color/colorError</item>
-    </style>
-
-
     <style name="MainMargin">
         <item name="android:paddingStart">15dp</item>
         <item name="android:paddingEnd">15dp</item>
@@ -39,16 +35,42 @@
         <item name="android:paddingBottom">10dp</item>
     </style>
 
-    <style name="Title">
+    <style name="DetailTitle">
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">@color/text</item>
         <item name="android:textColorHint">@color/textHint</item>
+    </style>
+
+    <style name="Icon">
+        <item name="android:iconTint">@color/icon</item>
+    </style>
+
+    <style name="AppTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textSize">24sp</item>
+        <item name="android:textColor">@color/text</item>
+        <item name="android:fontFamily">@font/red_hat_display_medium</item>
+    </style>
+
+    <style name="AppTitle">
+        <item name="titleTextAppearance">@style/AppTitleTextAppearance</item>
+        <item name="android:background">@color/main_color</item>
+    </style>
+
+    <style name="ItemTitle">
+        <item name="android:textSize">18sp</item>
+        <item name="android:textColor">@color/text</item>
     </style>
 
     <style name="Content">
         <item name="android:textSize">14sp</item>
         <item name="android:textColor">@color/text</item>
         <item name="android:textColorHint">@color/textHint</item>
+    </style>
+
+    <style name="CustomCheckBox" parent="Widget.Material3.CompoundButton.CheckBox">
+        <item name="android:buttonTint">@color/checkbox</item>
+        <!--        <item name="android:buttonTintMode">src_in</item>-->
+        <item name="android:textColor">@color/checkbox</item>
     </style>
 
 
