--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -6,5 +6,17 @@
         android:icon="@drawable/ic_toggle_off"
         android:title="@string/action_toggle_group"
         app:iconTint="@color/icon"
-        app:showAsAction="always" />
+        app:showAsAction="ifRoom" />
+    <item
+        android:id="@+id/action_sort_title_az"
+        android:icon="@drawable/ic_sort_az"
+        android:title="@string/sort_a_z"
+        app:showAsAction="ifRoom"
+        />
+    <item
+        android:id="@+id/action_sort_title_za"
+        android:icon="@drawable/ic_sort_za"
+        android:title="@string/sort_z_a"
+        app:showAsAction="ifRoom"
+        />
 </menu>
